<?xml version="1.0"?>
<package>
  <name>warmup_project</name>
  <version>0.0.0</version>
  <description>The warmup_project package for CompRobo</description>

  <maintainer email="claire.beery@students.olin.edu">cbeery</maintainer>>
  <license>TODO</license>
  <url type="repository">https://github.com/cebeery/warmup_project_2017</url>
  <author email="claire.beery@students.olin.edu">Claire E Beery</author>
  <author email="jeffrey.pflueger@students.olin.edu">Jeff Pflueger</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>neato_node</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vizualization_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>neato_node</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>vizualization_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
